knowledge model
