# app/Http/Controllers/Knowledge/KnowledgeController.php
@@ -1,0 +1,113 @@
+<?php
+
+declare(strict_types=1);
+
+namespace App\Http\Controllers\Knowledge;
+
+use App\Http\Controllers\Controller;
+use App\Models\Knowledge;
+use Illuminate\Http\Request;
+use Illuminate\Http\JsonResponse;
+use OpenApi\Attributes\Get;
+use OpenApi\Attributes\JsonContent;
+use OpenApi\Attributes\Response;
+
+class KnowledgeController extends Controller
+{
+    /**
+     * Display a listing of the resource.
+     *
+     * @return \Illuminate\Http\Response
+     */
+
+    #[Get(
+        path: '/knowledges',
+        operationId: 'getAllKnowledges',
+        tags: ['Knowledge'],
+        security: [['bearerAuth' => []]],
+        responses: [
+            new Response(
+                response: 200,
+                description: 'OK',
+                content: new JsonContent(
+                    ref: '#/components/schemas/Knowledge',
+                    type: 'object',
+                )
+            )
+        ]
+    )]
+
+    public function index(): JsonResponse
+    {
+        //Получить все knowledge
+        $knowledges=Knowledge::all();
+         return response()->json($knowledges);
+
+    }
+
+    /**
+     * Show the form for creating a new resource.
+     *
+     * @return \Illuminate\Http\Response
+     */
+    public function create()
+    {
+        //
+    }
+
+    /**
+     * Store a newly created resource in storage.
+     *
+     * @param  \Illuminate\Http\Request  $request
+     * @return \Illuminate\Http\Response
+     */
+    public function store(Request $request)
+    {
+        //
+    }
+
+    /**
+     * Display the specified resource.
+     *
+     * @param  int  $id
+     * @return \Illuminate\Http\Response
+     */
+    public function show($id)
+    {
+        //
+    }
+
+    /**
+     * Show the form for editing the specified resource.
+     *
+     * @param  int  $id
+     * @return \Illuminate\Http\Response
+     */
+    public function edit($id)
+    {
+        //
+    }
+
+    /**
+     * Update the specified resource in storage.
+     *
+     * @param  \Illuminate\Http\Request  $request
+     * @param  int  $id
+     * @return \Illuminate\Http\Response
+     */
+    public function update(Request $request, $id)
+    {
+        //
+    }
+
+    /**
+     * Remove the specified resource from storage.
+     *
+     * @param  int  $id
+     * @return \Illuminate\Http\Response
+     */
+    public function destroy($id)
+    {
+        //
+    }
+}
