# routes/api.php
@@ -3,7 +3,7 @@
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\User\UserController;
-
+use App\Http\Controllers\Knowledge\KnowledgeController;
 use App\Http\Controllers\V1\AuthController;
 /*
 |--------------------------------------------------------------------------
@@ -20,12 +20,13 @@ use App\Http\Controllers\V1\AuthController;
 Route::group(['middleware' => 'api','prefix' => 'user'], function () {
 
      Route::get('/me', [UserController::class, 'me'])->name('user.me');
+    
 
 
 
 });
 
-
+Route::resource('knowledges', KnowledgeController::class);
 
 Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
     return $request->user();
